workload/keda-http/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello
spec:
  parentRefs:
    - name: vllm-ilb
      namespace: default
  hostnames:
  - "hello.app"
  rules:
    - backendRefs:
        - kind: Service
          name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: hello
  namespace: keda
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default
  to:
  - group: ""
    kind: Service
    name: keda-add-ons-http-interceptor-proxy
